--- a/Klinik.Web/Views/MasterData/CreateOrEditPoli.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditPoli.cshtml
@@ -30,11 +30,10 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Organization</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PoliType</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Type, new { @class = "form-control" })
+                    @Html.DropDownList("Type", null, "-- PIlih Type ---", new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.Type, "", new { @class = "text-danger" })
-                    @*@Html.DropDownListFor(p => p.Type, (IEnumerable<SelectListItem>)ViewBag.Type, new { @class = "form-control", @id = "ddlType" })*@
                 </div>
             </div>
             <br />
