poli clinic dan cashier

--- a/Klinik.Web/Views/MappingMaster/ClinicPoliList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/ClinicPoliList.cshtml
@@ -178,7 +178,7 @@
         $('#btnSave').click(function (e) {
             if (window.FormData != undefined) {
                 if (rows_selected.length <= 0) {
-                    alert('please specify at least one privilege');
+                    alert('please specify at least one Poli');
                 }
                 else {
                     var form_data = new FormData();
