--- a/Klinik.Web/Views/Cashier/ListPatien.cshtml
+++ b/Klinik.Web/Views/Cashier/ListPatien.cshtml
@@ -108,7 +108,7 @@
                 { "data": "TypeDesc", "name": "TypeDesc", "autoWidth": true },
 
                 {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Patient/CreateOrEditPatient?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
+                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Patient/CreateOrEditPatient?id=' + full.Id + '">@Klinik.Resources.UIMessages.Detail</a>  ' + ""; }
                 }
             ]
         });
