--- a/Klinik.Web/Views/MasterData/PoliList.cshtml
+++ b/Klinik.Web/Views/MasterData/PoliList.cshtml
@@ -10,6 +10,7 @@
     <header class="panel-heading">
         <div class="panel-actions">
             <a href="#" class="fa fa-caret-down"></a>
+            <label>Filter : </label>
             @{
                 if (ViewBag.ClinicID <= 0)
                 {
